Dissy (9)
	* Added an icon (icon.svg). Please make a nicer version!

	* Add licensing info to file headers and fix email address

	* Convert tabs to spaces (fix from shiyee)

	* Fix close of about dialogue (patch from Lubomir Rintel)

	* Fix deprecated file dialogue (patch from shiyee, thanks)

	-- Simon Kagstrom <simon.kagstrom@gmail.com>,

Dissy (8)
	* Special-case Linux crashes. This allows you to paste things like

	    [ 3796.619417]  [<c031f2ef>] ? ext2_free_blocks+0xfa/0x2b7
	    [ 3796.619417]  [<c024982b>] ? activate_page+0x9a/0xa2
	    [ 3796.619417]  [<c0322c5f>] ? ext2_free_branches+0x12d/0x190
	    [ 3796.619417]  [<c02820ef>] ? __getblk+0x27/0x294

	into the dissy "address bar" and get a nice callback

	* bdnz+/- for PowerPC

	-- Simon Kagstrom <simon.kagstrom@gmail.com>, Sat Jan 31 10:16:14 CET 2009

Dissy (7)
	* Workaround for a objdump bug on (at least) some MIPS binaries,
	where addresses are internally 64 bits. If dissy finds no
	instructions in a function, it will therefore try to sign-extend
	the value and use that

	* Support for setting the OBJDUMP environment variable to set the
	objdump to use (idea from Joseph E. Garvey)

	* Initial ARM support (i.e., support for visualizing jumps -
	disassembly has always worked)

	* Better support for PowerPC (instruction regexp + handling of
	more branch instructions)

	* History handling has changed to more match that of a
	web-browser, overwriting the "current" entry instead of appending
	after it

	-- Simon Kagstrom <simon.kagstrom@gmail.com>, Fri Jan 25 13:10:25 CET 2008

Dissy (6)
	* New ChangeLog format

	* Better "location bar" behavior: Allow multiple words to be
	pasted and do more intelligent handling of numbers

	* Added navigation history with back/forward (like in web
	browsers)

	* Fixed MIPS register regexp to handle k registers

	* Added manpage written by the Varun Hiremath of the Debian
	project, and documented the new features
